# aiya-shell-works

./: .gitignore  AGENTS.md  README.md  build_portable_exe.bat  main.py  main.pyw  main_cli.py  main_gui.pyw  pyproject.toml  requirements.txt  shell-worker-portable.spec
core/: __init__.py  config_schema.py  context.py  events.py  exceptions.py  executor.py  files.py  handler_file.py  handler_input.py  input.py  input_inspector.py  module_manager.py  pipeline.py  planning.py  runtime.py  scheduler.py  terminal.py  tools.py  version.py  workflow_loader.py
gui/: __init__.py  launcher.py  main_window.py  project.py  workflow_editor.py  workflow_editor_state.py  workflow_store.py
gui/editor/: __init__.py  info_tab.py  state.py  steps_tab.py
gui/widgets/: __init__.py  config_panel.py  drop_zone.py  dynamic_form.py  execution_controller.py  input_panel.py  log_viewer.py  terminal_window.py
modules/: __init__.py  create_text_file.py  cycle_counter.py  delete_files.py  exiftool_clean.py  extract_archive.py  ffmpeg_compose.py  ffmpeg_convert.py  ffmpeg_merge.py  flatten_folder.py  gallery_count.py  gallery_rename.py  image_resize_watermark.py  image_transcode.py  input_echo.py  normalize_extensions.py  pack_rar.py  process_inspector.py  rename_by_pattern.py  rename_path.py  strip_attributes.py  unlock_files.py  vapoursynth_deinterlace.py  vapoursynth_frame_interpolate.py  vapoursynth_super_resolution.py  verify_create_text_file.py  verify_line_echo.py  verify_rename_path.py  verify_run_external_tool.py  verify_write_summary.py  vs_deinterlace.py  vs_frame_interpolate.py  vs_super_resolution.py  write_summary.py
resources/: install_aria2.ps1  install_exiftool.ps1  install_ffmpeg.ps1  install_vapoursynth.ps1  install_vsmlrt.ps1  mock_tool.bat  mock_tool.sh
scripts/: check_coverage.py  verify.py
tests/: __init__.py  test_architecture.py  test_builtin_modules.py  test_cli.py  test_config_schema.py  test_example_assets.py  test_executor.py  test_file_handler.py  test_files.py  test_flatten_folder.py  test_gui.py  test_gui_authoring.py  test_input.py  test_input_handler.py  test_input_inspector.py  test_input_inspector_tools.py  test_migration_repairs.py  test_module_manager.py  test_runtime.py  test_scheduler.py  test_terminal.py  test_unlock_files.py  test_workflow_editor_state.py  test_workflow_loader.py
tests/fixtures/: __init__.py  mock_module.py
workflows/: example-create.yaml  example-cycle-count.yaml  example-external-tool.yaml  example-file-rename.yaml  example-folder-rename.yaml  example-line-echo.yaml  example-none-generate.yaml  图集批处理.yaml  提取图集.yaml  视频AI-去隔行补帧超分.yaml  视频AI-补帧超分.yaml  视频AI-超分编码.yaml
