[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shell-worker-platform"
version = "2.0.0"
description = "Modular batch task platform — kernel-only CLI + optional PySide6 GUI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shell Worker" }]

dependencies = [
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.9,<7.0",
]
win = [
    "pywinpty>=2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[project.scripts]
shell-worker = "main_cli:main"

[project.gui-scripts]
shell-worker-gui = "main_gui:main"

[tool.setuptools]
packages = ["core", "gui", "gui.widgets", "modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"