[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shell-worker-platform"
version = "2.0.0"
description = "Modular batch task platform — kernel-only CLI + optional PySide6 GUI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shell Worker" }]

dependencies = [
    "watchdog>=6.0,<7.0",
    "croniter>=6.0,<7.0",
    "PyYAML>=6.0,<7.0",
    "Pillow>=10.0,<12.0",
    "pillow-avif-plugin>=1.0,<2.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.9,<7.0",
]
win = [
    "pywinpty>=2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.0,<3.0",
]

[project.scripts]
shell-worker = "main:main"

[project.gui-scripts]
shell-worker-gui = "gui.launcher:main"

[tool.setuptools]
packages = ["core", "gui", "gui.editor", "gui.widgets", "modules"]
py-modules = ["main"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort (import ordering)
    "N",     # pep8-naming
    "Q",     # flake8-quotes
    "UP",    # pyupgrade
    "T20",   # flake8-print
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["core", "gui", "modules"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"main.py" = ["T201"]
"scripts/verify.py" = ["T201", "E702"]
"tests/*.py" = ["E702"]
"gui/widgets/*.py" = ["N802"]
"gui/workflow_editor.py" = ["N802"]
"modules/process_inspector.py" = ["N801", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
    "gui: tests requiring the optional PySide6 GUI dependency",
]

[tool.mypy]
python_version = "3.11"
files = ["core/", "modules/", "main.py"]
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
exclude = ["gui/", "tests/", "scripts/"]
